<resources>
    <string name="app_name">Duty Reminder</string>

    <string name="time_picker_button_text">Set Time</string>
    <string name="date_picker_button_text">Set Date</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_reminder_button">New Reminder</string>
    <string name="new_reminder_message_hint">Message</string>
    <string name="save">Save</string>

    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel description</string>
    <string name="delete">Delete</string>
</resources>