<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.main.MainFragment">

    <TextView
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:id="@+id/picked_time_and_date_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold"
        tools:text="18:00\n13.09.2023" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:paddingTop="16dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/time_picker_button"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/time_picker_button_text" />

        <View
            android:layout_height="0dp"
            android:layout_width="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/date_picker_button"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/date_picker_button_text" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/new_reminder_message_hint"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/message_text_field"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:text="@string/save" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_button"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:text="@string/delete" />


</androidx.appcompat.widget.LinearLayoutCompat>