<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.main.MainFragment">

    <denis.beck.dutyreminder_2.epoxy.views.WeekView
        android:id="@+id/week_view"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/date_container"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            android:background="@drawable/time_date_value_background"
            android:gravity="center"
            android:id="@+id/picked_date_text"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:paddingVertical="4dp"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:textStyle="bold"
            tools:text="18:00" />

        <TextView
            android:background="@drawable/time_date_description_background"
            android:gravity="center"
            android:id="@+id/date_picker_button"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:text="@string/date_picker_button_text"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            android:background="@drawable/time_date_value_background"
            android:gravity="center"
            android:id="@+id/picked_time_text"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:paddingVertical="4dp"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:textStyle="bold"
            tools:text="20.09.2023" />

        <TextView
            android:background="@drawable/time_date_description_background"
            android:gravity="center"
            android:id="@+id/time_picker_button"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:text="@string/time_picker_button_text"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/new_reminder_message_hint"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="14dp"
        android:layout_width="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/message_text_field"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:text="@string/save" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_button"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:text="@string/delete" />


</androidx.appcompat.widget.LinearLayoutCompat>